--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FinalpollResultActivity"></activity>
+        <activity android:name=".RiplistActivity"
+            android:screenOrientation="landscape"></activity>
+        <activity android:name=".FinalpollResultActivity" />
         <activity android:name=".FinalpollActivity" />
         <activity android:name=".GamesettingActivity" />
         <activity android:name=".SignupActivity" />
