--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ListActivity"></activity>
+        <activity android:name=".FinalPollGraph"></activity>
+        <activity android:name=".ListActivity" />
         <activity android:name=".ListDialog" />
         <activity
             android:name=".RiplistActivity"
             android:screenOrientation="landscape" />
         <activity android:name=".FinalpollResultActivity" />
-        <activity android:name=".FinalpollActivity" />
+        <activity android:name=".FinalpollActivity">
+        </activity>
         <activity android:name=".GamesettingActivity" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
